--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -4,8 +4,64 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-size: 16px;
+
 }
 
 html {
     font-family: Roboto, sans-serif;
+
+}
+
+header {
+    height: 100px;
+    padding: 1rem;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    color:#060606;
+    justify-content: center;
+    border-bottom: 2px solid #060606;
+}
+
+.headings {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 0 0.5 300px;
+}
+
+.main-heading {
+    font-size: 2rem;
+}
+
+.sub-main-heading {
+    font-size: 1.5rem;
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 0 2 500px;
+}
+
+.nav-items {
+    display: flex;
+    list-style-type: none;
+    padding: 1rem;
+    flex: 0 2 500px;
+    justify-content: space-evenly;
+}
+
+.nav-item a:link, .nav-item a:visited {
+    color: #060606
+}
+
+.nav-item a:hover {
+    color: #616161;
+}
+
+.nav-item a:active {
+    color:orange;
 }
