--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -74,6 +74,18 @@ footer {
     width: 100%;
     height: 50px;
     border-top: 2px solid #000000;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-box {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    flex: 0 1 800px;
+    margin: 0 10px;
 }
 
 @media screen and (max-width: 575px) {
@@ -87,5 +99,27 @@ footer {
 
     .sub-main-heading {
         font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .nav-items {
+        flex-direction: column;
+    }
+
+    .main-heading {
+        font-size: 1rem;
+    }
+
+    .sub-main-heading {
+        font-size: 0.7rem;
+    }
+
+    p {
+        font-size: 0.7rem;
+    }
+
+    a{
+        font-size: 0.8rem;
     }
 }
