--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -21,6 +21,7 @@ header {
     color:#000000;
     justify-content: center;
     border-bottom: 2px solid #000000;
+    z-index: 10;
 }
 
 .headings {
@@ -68,14 +69,20 @@ nav {
     color:orange;
 }
 
+main {
+    overflow: hidden;
+}
+
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     width: 100%;
     height: 50px;
     border-top: 2px solid #000000;
     display: flex;
     justify-content: center;
+    z-index: 10;
+    background-color: white;
 }
 
 .footer-box {
