--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -6,16 +6,43 @@
 }
 
 #JT-image {
-    height: 100%;
     width: 100%;
+    height: auto;
+    align-self: flex-start;
+    justify-self: center;
 }
 
 #JT-image-container {
-    display: inline-flex;
+    display: flex;
     flex: 0 1 300px;
+    margin: 1.5rem;
+    height: 0%;
 }
 
 #JT-about-container {
-    display: inline-flex;
+    display: flex;
     flex: 0 1 700px;
+    margin: 1.5rem;
+}
+
+#JT-about-container p {
+    font-size: 1.2rem;
+}
+
+@media screen and (max-width: 575px) {
+    #JT-info {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #JT-image-container {
+        max-width: 300px;
+        min-width: 120px;
+        flex: 0 1 100px;
+        margin: 1rem;
+    }
+}
+
+@media screen and (max-width: 320px) {
+
 }
