--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -31,11 +31,11 @@ header {
     flex: 0 0.5 300px;
 }
 
-.main-heading {
+h1 {
     font-size: 2rem;
 }
 
-.sub-main-heading {
+h2 {
     font-size: 1.5rem;
 }
 
