--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -24,6 +24,7 @@
     flex-direction: column;
     flex: 0 1 700px;
     margin: 1.5rem;
+    justify-content: center;
 }
 
 #JT-about-container p {
