--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -12,6 +12,12 @@ html {
 
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 header {
     height: 100px;
     padding: 1rem;
@@ -71,10 +77,10 @@ nav {
 
 main {
     overflow: hidden;
+    flex-grow: 1;
 }
 
 footer {
-    position: fixed;
     bottom: 0px;
     width: 100%;
     height: 50px;
