--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -25,6 +25,7 @@
     flex: 0 1 700px;
     margin: 1.5rem;
     justify-content: center;
+    justify-content: flex-start;
 }
 
 #JT-about-container p {
