--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,8 +1,9 @@
 #JT-info {
     display: flex;
-    flex: 0 1 1000px;
+    flex: 0 1;
+    max-width: 1000px;
     justify-content: center;
-    margin: 40px 20px;
+    margin: 40px auto;
 }
 
 #JT-image {
@@ -31,6 +32,29 @@
 #JT-about-container p {
     font-size: 1.2rem;
 }
+
+#skills {
+    display: flex;
+    max-width: 1000px;
+    align-items: center;
+    margin: 40px auto;
+    flex-direction: column;
+}
+
+#skills-container {
+    margin: 10px 0;
+    display: flex;
+    width: 100%;
+    flex: 0 1 100%;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.fa-brands {
+    font-size: 2rem;
+    margin: 0 20px;
+}
+
 
 @media screen and (max-width: 880px) {
     #JT-info {
