--- a/resources/css/common.css
+++ b/resources/css/common.css
@@ -25,7 +25,7 @@ header {
     text-align: center;
     display: flex;
     flex-direction: row;
-    color:#000000;
+    color:#060606;
     justify-content: center;
     border-bottom: 2px solid #000000;
     z-index: 10;
@@ -65,7 +65,7 @@ nav {
 }
 
 .nav-item a:link, .nav-item a:visited {
-    color: #000000;
+    color: #060606;
 }
 
 .nav-item a:hover {
@@ -73,7 +73,7 @@ nav {
 }
 
 .nav-item a:active {
-    color:orange;
+    color: #fba92c;
 }
 
 main {
@@ -85,7 +85,7 @@ footer {
     bottom: 0px;
     width: 100%;
     height: 50px;
-    border-top: 2px solid #000000;
+    border-top: 2px solid #060606;
     display: flex;
     justify-content: center;
     z-index: 10;
