--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -55,10 +55,21 @@
     align-self: center;
 }
 
-.fa-brands {
-    font-size: 2rem;
-    margin: 0 20px;
+.fa-brands:hover {
+    color: #fba92c;
+    font-size: 2.5rem;
 }
+
+.fa-brands {
+    color: #060606;
+    font-size: 2rem;
+    padding: 0 10px;
+    width: 80px;
+    text-align: center;
+    transition: color 0.2s ease-in-out, font-size 0.2s ease-in-out;
+}
+
+
 
 
 @media screen and (max-width: 880px) {
