Updated hover on icons for devices with no hover ability

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -96,4 +96,9 @@
         color: #565656;
         font-size: 0.5em;
     }
+
+    .fa-brands:hover {
+        color: #060606;
+        font-size: 2rem;
+    }
 }
