--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -41,11 +41,13 @@
 
 #best-projects-title {
     align-self: flex-start;
+    flex: 0 1;
 }
 
 #best-project-names {
     flex: 0 1 300px;
     border-right: #060606 solid 1px;
+    padding: 0 1.5rem;
 }
 
 #best-project-names ul {
@@ -71,14 +73,15 @@
 
 #best-project-display {
     display: flex;
-    max-width: 700px;
+    padding: 0 1.5rem;
+    flex: 0 1 700px;
 }
 
 #best-project-display-left{
     display: flex;
     flex-direction: column;
-    flex: 0 1 400px;
-    margin: 0 1rem;
+    flex: 0 1 380px;
+    margin-right: 12px;
 }
 
 #best-project-img-container {
@@ -92,13 +95,19 @@
     height: auto;
     align-self: flex-start;
     justify-self: center;
+    flex: 0 1;
 }
 
 #best-project-display-right {
     display: flex;
-    flex: 0 1 300px;
+    flex: 0 1 260px;
     padding-top: 20px;
 }
+
+#best-project-display-desc {
+    flex: 0 1 100%;
+}
+
 
 #skills {
     display: flex;
@@ -151,6 +160,16 @@
 
     #JT-about-container {
         flex: 0 1;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    #best-project-display {
+        flex-wrap: wrap;
+    }
+
+    #best-project-display-right {
+        flex: 0 1 380px;
     }
 }
 
